[gd_scene load_steps=7 format=3 uid="uid://di5hrhsqgwf1w"]

[ext_resource type="Script" path="res://scripts/object/basic_enemy.gd" id="1_mg1jb"]
[ext_resource type="PackedScene" uid="uid://cn6leqefso6dt" path="res://scenes/bullets/enemy_a.tscn" id="2_kxdqv"]
[ext_resource type="AudioStream" uid="uid://bxpu2bmx1jyhy" path="res://assets/sounds and music/player_hit_sound.mp3" id="3_ot2ri"]
[ext_resource type="AudioStream" uid="uid://clx44rwv7x71s" path="res://assets/sounds and music/enemy_hit.mp3" id="4_6ip6d"]
[ext_resource type="Texture2D" uid="uid://bm25qjr06ujdt" path="res://assets/images/puffenem.png" id="4_fyltv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2r8i"]
size = Vector2(48, 32)

[node name="Basic_enemy" type="Area2D" groups=["Enemy"]]
scale = Vector2(0.956148, 1)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mg1jb")
bullet = ExtResource("2_kxdqv")
float_speed = 4
speed_modifier = 3
bullet_count = 96
cooldown = 0.5
shoot_distance = 40
coordinate_x = 0
hit_sound = ExtResource("4_6ip6d")
death_sound = ExtResource("3_ot2ri")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c2r8i")
debug_color = Color(0.901961, 0.290196, 0.309804, 0.419608)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.38419e-07, -2.38419e-07)
scale = Vector2(1.33372, 1.08813)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1, 0.68)
texture = ExtResource("4_fyltv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
